tests/errors/sem.arg-count-mismatch.insert.or
main :: () -> void {
    @insert "there", "is", "too", "many", "arguments";
};
